fix z-index for text and top nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ strong {
 .top-nav {
     position: fixed;
     width: calc(100% - var(--wrapper-padding));
-    z-index: 6;
+    z-index: 7;
     background-color: var(--theme-black);
     transition: transform 1s;
     transform: translateY(-110%);
@@ -376,6 +376,7 @@ strong {
     width: 45ch;
     margin-right: var(--wrapper-padding);
     opacity: 0;
+    z-index: 6;
 }
 .scene-text-flat {
     box-shadow: none;
